welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: not found: value makeV
  makeV(Color.yellow);
  ^PatternPicture:25: error: not found: value makeV
  makeV(Color.red);
  ^PatternPicture:26: error: not found: value makeV
  makeV(Color.blue);
  ^PatternPicture:27: error: not found: value makeV
  makeV(Color.green);
  ^